# manipulator-graph-in-C

./: CMakeLists.txt  main.c
graph_list/: graph_list.c  graph_list.h
graph_matrix/: graph_matrix.c  graph_matrix.h
node/: node.c  node.h
queue/: queue.c  queue.h
utils/: utils.c  utils.h
